--- a/app/src/main/res/layout/server_code_trigger_detail_view.xml
+++ b/app/src/main/res/layout/server_code_trigger_detail_view.xml
@@ -121,6 +121,23 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="20dp"
                         />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="Parameters"
+                        android:textStyle="bold"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
+                        />
+                    <ListView
+                        android:id="@+id/listViewParameters"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="10dp"
+                        />
+
                 </LinearLayout>
             </android.support.v7.widget.CardView>
             <android.support.v7.widget.CardView
