supported getting server code results

--- a/app/src/main/res/layout/server_code_trigger_detail_view.xml
+++ b/app/src/main/res/layout/server_code_trigger_detail_view.xml
@@ -203,6 +203,17 @@
         </LinearLayout>
     </ScrollView>
 
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabShowResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:layout_alignParentRight="true"
+        android:layout_above="@+id/fabEditTrigger"
+        android:src="@drawable/ic_eye_white_36dp"
+        app:backgroundTint="#ff33b5e5"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabEditTrigger"
         android:layout_width="wrap_content"
