--- a/app/src/main/res/layout/create_command_view.xml
+++ b/app/src/main/res/layout/create_command_view.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/labelActions"
+        android:text="Actions"
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        />
 
     <CheckBox
         android:id="@+id/checkboxPower"
@@ -10,9 +26,9 @@
         android:text="Power"
         android:textStyle="bold"
         android:checked="true"
+        android:layout_below="@+id/labelActions"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         />
 
@@ -151,14 +167,26 @@
         android:layout_margin="10dp"
         />
 
+    <include
+        layout="@layout/common_options"
+        android:id="@+id/includeOptions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/seekBarColorTemperature"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        />
+
     <Button
         android:id="@+id/buttonSendCommand"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Send Command"
-        android:layout_below="@+id/seekBarColorTemperature"
+        android:layout_below="@+id/includeOptions"
         android:layout_alignParentLeft="true"
         android:layout_margin="10dp"
         />
 
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
