set TriggeredCommand options.

--- a/app/src/main/res/layout/create_trigger_command_view.xml
+++ b/app/src/main/res/layout/create_trigger_command_view.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textTitle"
@@ -175,6 +179,7 @@
         />
 
     <LinearLayout
+        android:id="@+id/layoutTargetID"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/labelTargetID"
@@ -198,4 +203,17 @@
             android:maxLines="1"
             />
     </LinearLayout>
-</RelativeLayout>
+
+    <include
+        layout="@layout/common_options"
+        android:id="@+id/includeOptions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/layoutTargetID"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        />
+
+    </RelativeLayout>
+</ScrollView>
