--- a/app/src/main/res/layout/create_trigger_servercode_view.xml
+++ b/app/src/main/res/layout/create_trigger_servercode_view.xml
@@ -94,6 +94,14 @@
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             />
+
+        <include
+            layout="@layout/common_options"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            />
+
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
