--- a/app/src/main/res/layout/onboard_view.xml
+++ b/app/src/main/res/layout/onboard_view.xml
@@ -5,6 +5,10 @@
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal">
 
+    <ScrollView
+        android:id="@+id/onboard_form_scroll"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
     <LinearLayout android:id="@+id/onboard_form" android:layout_width="match_parent"
         android:layout_height="wrap_content" android:orientation="vertical">
         <LinearLayout android:id="@+id/onboard_with_id_form" android:layout_width="match_parent"
@@ -43,7 +47,7 @@
                 />
         </LinearLayout>
         <LinearLayout android:id="@+id/onboard_with_vender_id_form" android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:orientation="vertical">
+            android:layout_height="match_parent" android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -92,50 +96,56 @@
                 android:singleLine="true"
                 android:layout_margin="10dp"
                 />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Firmware Version"
+                android:textStyle="bold"
+                android:layout_margin="10dp"
+                />
+            <EditText
+                android:id="@+id/editTextFirmwareVersion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:layout_margin="10dp"
+                />
         </LinearLayout>
-    </LinearLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/onboard_operation_form"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/onboard_form"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="center_horizontal">
         <Button
             android:id="@+id/buttonOnboard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Onboard"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_margin="10dp"
             />
-        <Switch
-            android:id="@+id/switchThingIDType"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/buttonOnboard"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_margin="10dp" />
-        <TextView
-            android:id="@+id/textSwitch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Use vendor thing ID"
-            android:layout_alignTop="@+id/switchThingIDType"
-            android:layout_toRightOf="@+id/switchThingIDType"
-            android:layout_toEndOf="@+id/switchThingIDType"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            />
-    </RelativeLayout>
-
+            android:orientation="horizontal">
+            <Switch
+                android:id="@+id/switchThingIDType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_margin="10dp"
+                />
+            <TextView
+                android:id="@+id/textSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Use vendor thing ID"
+                android:layout_alignTop="@+id/switchThingIDType"
+                android:layout_toRightOf="@+id/switchThingIDType"
+                android:layout_toEndOf="@+id/switchThingIDType"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                />
+        </LinearLayout>
+    </LinearLayout>
+    </ScrollView>
 
     <ScrollView
         android:id="@+id/onboarded_form"
