--- a/app/src/main/res/layout/history_state_list_item.xml
+++ b/app/src/main/res/layout/history_state_list_item.xml
@@ -2,8 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
     <ImageView
         android:id="@+id/row_icon"
         android:src="@drawable/ic_exit_to_app_black_36dp"
@@ -24,7 +25,7 @@
             android:gravity="center_vertical"
             android:textSize="10sp"
             android:textStyle="bold"
-            tools:text="1234567890-abcdefghi"
+            tools:text="create at"
             />
     </LinearLayout>
     <TextView
@@ -32,10 +33,10 @@
         android:width="90dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="right"
-        android:gravity="center_vertical"
+        android:gravity="center_vertical|right"
+        android:layout_weight="1"
         android:textSize="10sp"
         android:textStyle="bold"
-        tools:text="ServerCode"
+        tools:text="History State"
         />
 </LinearLayout>
